# supplyify

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SKILL.md  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_indicator.md
.github/workflows/: ci.yml  release.yml
docs/: ADDING_ECOSYSTEMS.md  ADDING_INDICATORS.md  ARCHITECTURE.md  CI_INTEGRATION.md  ENTERPRISE.md  diagrams.md
src/: lib.rs  main.rs  osv.rs  plugin.rs  scanner.rs  sweep.rs
src/commands/: check.rs  check_update.rs  indicators.rs  mod.rs  scan.rs  sweep.rs  update.rs
src/ecosystems/: cargo.rs  mod.rs  npm.rs  pip.rs
src/heuristics/: mod.rs  postinstall.rs  version.rs
src/indicators/: bundled.toml  mod.rs
src/output/: agent.rs  json.rs  mod.rs  text.rs
